--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "gulp-useref": "^3.1.0",
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "normalize.css": "^4.2.0"
   }
 }
