--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "pov-build-snap",
+  "name": "pov-mobile-storytelling",
   "version": "0.0.3",
-  "description": "POV Snapchat Tool",
+  "description": "POV Mobile Storytelling Tool",
   "main": "gulpfile.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/povdocs/digital.git"
+    "url": "https://github.com/povdocs/pov-mobile-storytelling.git"
   },
   "author": {
     "name": "sunil523",
     "email": "admin@sunil523.com"
   },
-  "license": "UNLICENSED",
+  "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/povdocs/digital/issues"
+    "url": "https://github.com/povdocs/pov-mobile-storytelling/issues"
   },
-  "homepage": "http://www.pbs.org/pov/digital/",
+  "homepage": "http://www.pbs.org/pov/",
   "devDependencies": {
-    "bootstrap": "^3.3.6",
     "bourbon": "^4.2.7",
     "browser-sync": "^2.13.0",
     "del": "^1.2.0",
@@ -26,7 +25,6 @@
     "gulp-concat": "^2.6.0",
     "gulp-css-url-adjuster": "^0.2.3",
     "gulp-cssnano": "^2.1.2",
-    "gulp-google-webfonts": "0.0.6",
     "gulp-htmlmin": "^1.1.3",
     "gulp-imagemin": "^2.3.0",
     "gulp-jshint": "^1.11.2",
